<resources>
    <string name="app_name">Bora Rachar PDM</string>
    <string name="título"> VAMOS RACHAR!</string>
    <string name="img_V">Valor</string>
    <string name="img_G">grupo</string>
    <string name="textview">TextView</string>
    <string name="result">R$ </string>
    <string name="submit">tts</string>
    <string name="todo">TODO</string>
    <string name="share">shareB</string>
</resources>