<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9F52C8"
        android:backgroundTintMode="add"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bowlby_one"
                android:text="@string/título"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_G"
                android:layout_width="76dp"
                android:layout_height="74dp"
                android:contentDescription="@string/img_V"
                app:srcCompat="@drawable/valor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Layoutvalor"
                android:layout_width="146dp"
                android:layout_height="91dp"
                app:layout_constraintEnd_toStartOf="@+id/ins_qt"
                app:layout_constraintStart_toStartOf="@+id/ins_qt"
                tools:ignore="DuplicateIds">

                <EditText
                    android:id="@+id/ins_valor"
                    android:layout_width="94dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:baselineAligned="false"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.074"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="101dp"
                    android:layout_height="76dp">

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/img_G"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:contentDescription="@string/img_G"
                app:srcCompat="@drawable/grupo"
                tools:ignore="DuplicateIds" />

            <EditText
                android:id="@+id/ins_qt"
                android:layout_width="101dp"
                android:layout_height="76dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_horizontal"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bowlby_one"
                android:gravity="center_vertical"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/shareB"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:contentDescription="@string/share"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/share" />

            <Space
                android:layout_width="69dp"
                android:layout_height="16dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ttsB"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tts" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>